--- a/gogo-react-start-with-auth/src/assets/css/sass/views/landing-page.scss
+++ b/gogo-react-start-with-auth/src/assets/css/sass/views/landing-page.scss
@@ -28,6 +28,7 @@
     background: none;
     width: unset;
     height: unset;
+
     span {
       display: inline-block;
       width: 100px;
@@ -48,6 +49,7 @@
     }
 
     .main-container {
+
       .content-container,
       nav {
         transform: translateX(-300px);
@@ -149,6 +151,7 @@
 
       @include respond-below(lg) {
         height: $navbar-height-md;
+
         .navbar-logo {
           width: 100px;
           height: 30px;
@@ -241,8 +244,8 @@
         }
       }
 
-      .nav-item > a,
-      .nav-item > .dropdown > a {
+      .nav-item>a,
+      .nav-item>.dropdown>a {
         color: $button-text-color;
         font-family: Nunito, sans-serif;
         font-size: 1rem;
@@ -250,8 +253,9 @@
         margin-top: 0;
       }
 
-      .nav-item:not(.active) > a,
-      .nav-item:not(.active) .dropdown > a {
+      .nav-item:not(.active)>a,
+      .nav-item:not(.active) .dropdown>a {
+
         &:hover:not(.btn),
         &:active:not(.btn) {
           opacity: 0.8;
@@ -262,11 +266,11 @@
         height: 80px;
         position: relative;
 
-        &:hover > .dropdown-menu {
+        &:hover>.dropdown-menu {
           display: block;
         }
 
-        & > .dropdown-toggle:active {
+        &>.dropdown-toggle:active {
           pointer-events: none;
         }
 
@@ -359,17 +363,7 @@
     }
 
     &.home {
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 2600 1440'%3E%3Cdefs%3E%3ClinearGradient id='linear-gradient' x1='862.49' y1='-420.67' x2='1546.24' y2='981.21' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0.1' stop-color='" + encodecolor(
-          $lp-bg-color-1
-        ) + "'/%3E%3Cstop offset='0.27' stop-color='" + encodecolor(
-          $lp-bg-color-2
-        ) + "'/%3E%3Cstop offset='0.63' stop-color='" + encodecolor(
-          $lp-bg-color-3
-        ) + "'/%3E%3Cstop offset='0.88' stop-color='" + encodecolor(
-          $lp-bg-color-4
-        ) + "'/%3E%3C/linearGradient%3E%3C/defs%3E%3Ctitle%3Ebackground-home%3C/title%3E%3Cg%3E%3Cpath style='fill:url(%23linear-gradient);' d='M0,0V952.71l497.08,428.77c44.64,38.51,122.25,50,172.46,25.57L2600,467.26V0Z'/%3E%3Cpath style='fill:" + encodecolor(
-          $lp-bg-color-4
-        ) + ";opacity:0.3;' d='M624.43,1418.11c-44.33,4.25-94.67-9.44-127.35-37.63L0,952.48v50.82l452.08,389.18C496.69,1431,574.21,1442.48,624.43,1418.11Z'/%3E%3C/g%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 2600 1440'%3E%3Cdefs%3E%3ClinearGradient id='linear-gradient' x1='862.49' y1='-420.67' x2='1546.24' y2='981.21' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0.1' stop-color='" + encodecolor($lp-bg-color-1 ) + "'/%3E%3Cstop offset='0.27' stop-color='" + encodecolor($lp-bg-color-2 ) + "'/%3E%3Cstop offset='0.63' stop-color='" + encodecolor($lp-bg-color-3 ) + "'/%3E%3Cstop offset='0.88' stop-color='" + encodecolor($lp-bg-color-4 ) + "'/%3E%3C/linearGradient%3E%3C/defs%3E%3Ctitle%3Ebackground-home%3C/title%3E%3Cg%3E%3Cpath style='fill:url(%23linear-gradient);' d='M0,0V952.71l497.08,428.77c44.64,38.51,122.25,50,172.46,25.57L2600,467.26V0Z'/%3E%3Cpath style='fill:" + encodecolor($lp-bg-color-4 ) + ";opacity:0.3;' d='M624.43,1418.11c-44.33,4.25-94.67-9.44-127.35-37.63L0,952.48v50.82l452.08,389.18C496.69,1431,574.21,1442.48,624.43,1418.11Z'/%3E%3C/g%3E%3C/svg%3E");
       background-repeat: no-repeat;
       background-position-y: 0;
       background-color: transparent;
@@ -386,17 +380,7 @@
     }
 
     &.subpage {
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 2600 1040'%3E%3Cdefs%3E%3ClinearGradient id='linear-gradient' x1='929.23' y1='-453.21' x2='1676' y2='1077.89' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0.1' stop-color='" + encodecolor(
-          $lp-bg-color-1
-        ) + "'/%3E%3Cstop offset='0.27' stop-color='" + encodecolor(
-          $lp-bg-color-2
-        ) + "'/%3E%3Cstop offset='0.63' stop-color='" + encodecolor(
-          $lp-bg-color-3
-        ) + "'/%3E%3Cstop offset='0.88' stop-color='" + encodecolor(
-          $lp-bg-color-4
-        ) + "'/%3E%3C/linearGradient%3E%3C/defs%3E%3Ctitle%3Ebackground-sub%3C/title%3E%3Cg%3E%3Cpath style='fill:url(%23linear-gradient);' d='M170.66,739.24,522.89,996.51c31.63,23.1,89.75,35.48,129.15,27.5L2166.74,717.1,2600,627.22V0H0V614Z'/%3E%3Cpath style='fill:" + encodecolor(
-          $lp-bg-color-4
-        ) + ";opacity:0.3;' d='M442.89,993.51c31.63,23.1,89.75,35.48,129.15,27.5l4.62-.94c-20.5-5.19-39.74-13.32-53.77-23.56L170.66,739.24,0,614v55.73l90.66,66.55Z'/%3E%3C/g%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 2600 1040'%3E%3Cdefs%3E%3ClinearGradient id='linear-gradient' x1='929.23' y1='-453.21' x2='1676' y2='1077.89' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0.1' stop-color='" + encodecolor($lp-bg-color-1 ) + "'/%3E%3Cstop offset='0.27' stop-color='" + encodecolor($lp-bg-color-2 ) + "'/%3E%3Cstop offset='0.63' stop-color='" + encodecolor($lp-bg-color-3 ) + "'/%3E%3Cstop offset='0.88' stop-color='" + encodecolor($lp-bg-color-4 ) + "'/%3E%3C/linearGradient%3E%3C/defs%3E%3Ctitle%3Ebackground-sub%3C/title%3E%3Cg%3E%3Cpath style='fill:url(%23linear-gradient);' d='M170.66,739.24,522.89,996.51c31.63,23.1,89.75,35.48,129.15,27.5L2166.74,717.1,2600,627.22V0H0V614Z'/%3E%3Cpath style='fill:" + encodecolor($lp-bg-color-4 ) + ";opacity:0.3;' d='M442.89,993.51c31.63,23.1,89.75,35.48,129.15,27.5l4.62-.94c-20.5-5.19-39.74-13.32-53.77-23.56L170.66,739.24,0,614v55.73l90.66,66.55Z'/%3E%3C/g%3E%3C/svg%3E");
       background-position-y: -370px;
       background-repeat: no-repeat;
       background-size: auto 1040px;
@@ -423,34 +407,14 @@
     }
 
     &.subpage-long {
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 2600 1040'%3E%3Cdefs%3E%3ClinearGradient id='linear-gradient' x1='929.23' y1='-453.21' x2='1676' y2='1077.89' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0.1' stop-color='" + encodecolor(
-          $lp-bg-color-1
-        ) + "'/%3E%3Cstop offset='0.27' stop-color='" + encodecolor(
-          $lp-bg-color-2
-        ) + "'/%3E%3Cstop offset='0.63' stop-color='" + encodecolor(
-          $lp-bg-color-3
-        ) + "'/%3E%3Cstop offset='0.88' stop-color='" + encodecolor(
-          $lp-bg-color-4
-        ) + "'/%3E%3C/linearGradient%3E%3C/defs%3E%3Ctitle%3Ebackground-sub%3C/title%3E%3Cg%3E%3Cpath style='fill:url(%23linear-gradient);' d='M170.66,739.24,522.89,996.51c31.63,23.1,89.75,35.48,129.15,27.5L2166.74,717.1,2600,627.22V0H0V614Z'/%3E%3Cpath style='fill:" + encodecolor(
-          $lp-bg-color-4
-        ) + ";opacity:0.3;' d='M442.89,993.51c31.63,23.1,89.75,35.48,129.15,27.5l4.62-.94c-20.5-5.19-39.74-13.32-53.77-23.56L170.66,739.24,0,614v55.73l90.66,66.55Z'/%3E%3C/g%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 2600 1040'%3E%3Cdefs%3E%3ClinearGradient id='linear-gradient' x1='929.23' y1='-453.21' x2='1676' y2='1077.89' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0.1' stop-color='" + encodecolor($lp-bg-color-1 ) + "'/%3E%3Cstop offset='0.27' stop-color='" + encodecolor($lp-bg-color-2 ) + "'/%3E%3Cstop offset='0.63' stop-color='" + encodecolor($lp-bg-color-3 ) + "'/%3E%3Cstop offset='0.88' stop-color='" + encodecolor($lp-bg-color-4 ) + "'/%3E%3C/linearGradient%3E%3C/defs%3E%3Ctitle%3Ebackground-sub%3C/title%3E%3Cg%3E%3Cpath style='fill:url(%23linear-gradient);' d='M170.66,739.24,522.89,996.51c31.63,23.1,89.75,35.48,129.15,27.5L2166.74,717.1,2600,627.22V0H0V614Z'/%3E%3Cpath style='fill:" + encodecolor($lp-bg-color-4 ) + ";opacity:0.3;' d='M442.89,993.51c31.63,23.1,89.75,35.48,129.15,27.5l4.62-.94c-20.5-5.19-39.74-13.32-53.77-23.56L170.66,739.24,0,614v55.73l90.66,66.55Z'/%3E%3C/g%3E%3C/svg%3E");
       height: 1040px;
       background-repeat: no-repeat;
       background-position-y: -200px;
     }
 
     &.footer {
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 2600 1100'%3E%3Cdefs%3E%3ClinearGradient id='linear-gradient' x1='-153' y1='642.88' x2='3129.11' y2='642.88' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0.1' stop-color='" + encodecolor(
-          $lp-bg-color-1
-        ) + "'/%3E%3Cstop offset='0.27' stop-color='" + encodecolor(
-          $lp-bg-color-2
-        ) + "'/%3E%3Cstop offset='0.63' stop-color='" + encodecolor(
-          $lp-bg-color-3
-        ) + "'/%3E%3Cstop offset='0.88' stop-color='" + encodecolor(
-          $lp-bg-color-4
-        ) + "'/%3E%3C/linearGradient%3E%3ClinearGradient id='linear-gradient-2' y1='264.94' x2='3129.11' y2='264.94' xlink:href='%23linear-gradient'/%3E%3C/defs%3E%3Cg%3E%3Cpath style='fill:" + encodecolor(
-          $lp-bg-color-4
-        ) + ";opacity:0.3;' d='M2019.51,188.57c17.85,4.08,35.64,13,52.49,29.43l528,635.74V787.56L2127,218C2092.59,184.43,2054.24,182.23,2019.51,188.57Z'/%3E%3Cpath style='fill:url(%23linear-gradient);' d='M1945,193,0,714v386H2600V853.33L2072,218C2031,178,1984.41,182.53,1945,193Z'/%3E%3Cpath style='fill:url(%23linear-gradient-2);' d='M2308.31,91c-60.24,17.09-77.23,69.94-37.76,117.43l210.94,253.81c26.74,32.19,72.83,54,118.51,59.37V8.25Z'/%3E%3C/g%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 2600 1100'%3E%3Cdefs%3E%3ClinearGradient id='linear-gradient' x1='-153' y1='642.88' x2='3129.11' y2='642.88' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0.1' stop-color='" + encodecolor($lp-bg-color-1 ) + "'/%3E%3Cstop offset='0.27' stop-color='" + encodecolor($lp-bg-color-2 ) + "'/%3E%3Cstop offset='0.63' stop-color='" + encodecolor($lp-bg-color-3 ) + "'/%3E%3Cstop offset='0.88' stop-color='" + encodecolor($lp-bg-color-4 ) + "'/%3E%3C/linearGradient%3E%3ClinearGradient id='linear-gradient-2' y1='264.94' x2='3129.11' y2='264.94' xlink:href='%23linear-gradient'/%3E%3C/defs%3E%3Cg%3E%3Cpath style='fill:" + encodecolor($lp-bg-color-4 ) + ";opacity:0.3;' d='M2019.51,188.57c17.85,4.08,35.64,13,52.49,29.43l528,635.74V787.56L2127,218C2092.59,184.43,2054.24,182.23,2019.51,188.57Z'/%3E%3Cpath style='fill:url(%23linear-gradient);' d='M1945,193,0,714v386H2600V853.33L2072,218C2031,178,1984.41,182.53,1945,193Z'/%3E%3Cpath style='fill:url(%23linear-gradient-2);' d='M2308.31,91c-60.24,17.09-77.23,69.94-37.76,117.43l210.94,253.81c26.74,32.19,72.83,54,118.51,59.37V8.25Z'/%3E%3C/g%3E%3C/svg%3E");
       background-color: $foreground-color;
       background-repeat: no-repeat;
       padding-bottom: 0;
@@ -487,9 +451,7 @@
       height: 70px;
       position: absolute;
       top: -70px;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2600 70'%3E%3Cg%3E%3Cpath style='fill:" + encodecolor(
-          $foreground-color
-        ) + "' d='M2600,70v-.71C2254.44,26.19,1799.27,0,1300.5,0,801.25,0,345.68,26.24,0,69.42V70Z'/%3E%3C/g%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2600 70'%3E%3Cg%3E%3Cpath style='fill:" + encodecolor($foreground-color ) + "' d='M2600,70v-.71C2254.44,26.19,1799.27,0,1300.5,0,801.25,0,345.68,26.24,0,69.42V70Z'/%3E%3C/g%3E%3C/svg%3E");
       background-size: cover;
       background-position: center;
     }
@@ -500,9 +462,7 @@
       height: 70px;
       position: absolute;
       bottom: -70px;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2600 70'%3E%3Cg%3E%3Cpath style='fill:" + encodecolor(
-          $foreground-color
-        ) + "' d='M0,0V.71C345.56,43.81,800.73,70,1299.5,70,1798.75,70,2254.32,43.76,2600,.58V0Z'/%3E%3C/g%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2600 70'%3E%3Cg%3E%3Cpath style='fill:" + encodecolor($foreground-color ) + "' d='M0,0V.71C345.56,43.81,800.73,70,1299.5,70,1798.75,70,2254.32,43.76,2600,.58V0Z'/%3E%3C/g%3E%3C/svg%3E");
       background-size: cover;
       background-position: center;
     }
@@ -591,6 +551,7 @@
 
   .home-carousel {
     cursor: grab;
+
     ::-moz-selection {
       /* Code for Firefox */
       color: inherit;
@@ -802,6 +763,7 @@
       li {
         padding: 0.5rem 2.5rem;
         margin-bottom: unset;
+
         a {
           font-size: 0.9rem;
         }
@@ -850,6 +812,7 @@
   .listing-card-container {
     background: initial;
     box-shadow: initial;
+    height: 150px;
 
     .listing-heading {
       height: 65px;
@@ -884,9 +847,9 @@
       -webkit-text-fill-color: white !important;
     }
 
-    .has-float-label > span,
+    .has-float-label>span,
     .has-float-label label,
-    .has-top-label > span,
+    .has-top-label>span,
     .has-top-label label {
       color: rgba($button-text-color, 0.6);
     }
@@ -904,9 +867,9 @@
     }
   }
 
-  .has-float-label > span,
+  .has-float-label>span,
   .has-float-label label,
-  .has-top-label > span,
+  .has-top-label>span,
   .has-top-label label {
     font-size: 64%;
   }
@@ -1367,6 +1330,7 @@
       transform: translateX(50%);
     }
   }
+
   .feature-row {
     margin-top: 80px;
 
@@ -1374,6 +1338,7 @@
       margin-top: 40px;
     }
   }
+
   .mobile-hero {
     margin-left: initial;
     transform: translateX(50%);
@@ -1383,7 +1348,7 @@
   .mobile-menu ul {
     padding: initial;
 
-    .nav-item + .nav-item {
+    .nav-item+.nav-item {
       margin-right: initial;
       margin-left: initial;
     }
