--- a/gogo-react-start-with-auth/src/assets/css/sass/core/cards.scss
+++ b/gogo-react-start-with-auth/src/assets/css/sass/core/cards.scss
@@ -79,10 +79,9 @@
 }
 
 .card-img-left {
-  width: 100%;
   border-top-left-radius: calc(0.15rem - 1px);
   border-bottom-left-radius: calc(0.15rem - 1px);
-  height: 100%;
+  max-height: 100px;
   object-fit: cover;
 }
 
@@ -350,15 +349,15 @@
     }
 
     .card-img-left {
-      border-top-right-radius: $border-radius-rounded !important;
-      border-bottom-right-radius: $border-radius-rounded !important;
+      border-top-right-radius: $border-radius-rounded  !important;
+      border-bottom-right-radius: $border-radius-rounded  !important;
       border-top-left-radius: initial !important;
       border-bottom-left-radius: initial !important;
     }
 
     .card-img-right {
-      border-top-left-radius: $border-radius-rounded !important;
-      border-bottom-left-radius: $border-radius-rounded !important;
+      border-top-left-radius: $border-radius-rounded  !important;
+      border-bottom-left-radius: $border-radius-rounded  !important;
       border-top-right-radius: initial !important;
       border-bottom-right-radius: initial !important;
     }
