--- a/gogo-react-start-with-auth/src/assets/css/sass/plugins/icons.scss
+++ b/gogo-react-start-with-auth/src/assets/css/sass/plugins/icons.scss
@@ -1,3 +1,15 @@
+.card-icon {
+  width: 20%;
+  float: left;
+  height: 100px;
+  font-size: 32px;
+  text-align: center !important;
+}
+
+.card-modal {
+  max-width: 320px;
+}
+
 .simple-line-icons .glyph,
 .mind-icons .glyph {
   width: 14.28%;
@@ -17,7 +29,7 @@
 
   .class-name {
     font-size: 0.76rem;
-    color: $muted-color !important;
+    color: $muted-color  !important;
     text-align: center !important;
   }
 
